[package]
edition = "2018"
name = "node-sys"
version = "0.4.2"
authors = ["hvithrafn <hvithrafn@users.noreply.github.com>"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/interfaces-rs/node-sys"
description = """
Raw bindings to the Node.js API for projects using wasm-bindgen.
"""

[badges]
maintenance = { status = "experimental" }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false
test = false

[dependencies]
cfg-if = "1.0"
js-sys = "0.3"
serde = "1.0"
wasm-bindgen = { version = "=0.2.70", features = ["strict-macro"] }

[dependencies.web-sys]
version = "0.3"
features = []

[dev-dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
