[package]
edition = "2018"
name = "node-sys"
version = "0.4.2"
authors = ["hvithrafn <hvithrafn@users.noreply.github.com>"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/interfaces-rs/node-sys"
description = """
Raw bindings to the Node.js API for projects using wasm-bindgen.
"""

[badges]
maintenance = { status = "experimental" }

[dependencies]
cfg-if = "1.0"
futures-core = "0.3"
futures-util = { version = "0.3", features = ["io"] }
js-sys = "0.3"
js-sys-futures = "0.3.0"
wasm-bindgen = { version = "=0.2.70", features = ["strict-macro"] }
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "Url"
]

[dev-dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"

[workspace]
members = [".", "xtask"]
default-members = ["."]
